--- a/ui/views/__signup.html
+++ b/ui/views/__signup.html
@@ -1,4 +1,4 @@
-<header id="header" data-current-skin={{mactrl.currentSkin}} data-ng-include src="'template/header.html'" data-ng-controller="headerCtrl as hctrl"></header>
+<header id="header" data-current-skin={{mactrl.currentSkin}} data-ng-include src="'template/header_trimmed.html'"></header>
 
 <section id="main">
   <section id="content" class="page-view">
@@ -18,6 +18,14 @@
           </div>
 
           <div class="card-body card-padding">
+              <div class="form-group">
+                  <label class="col-sm-2 control-label">Address</label>
+                  <div class="col-sm-10">
+                    <div class="fg-line">
+                      <input type="text" disabled="true" class="form-control input-sm" placeholder="coinbase">
+                    </div>
+                  </div>
+                </div>
             <div class="form-group">
               <label class="col-sm-2 control-label">Name</label>
               <div class="col-sm-10">
@@ -50,5 +58,6 @@
 
   </section>
 </section>
+
 
 <footer id="footer" data-ng-include src="'template/footer.html'"></footer>
