--- a/ui/template/header_trimmed.html
+++ b/ui/template/header_trimmed.html
@@ -5,7 +5,7 @@
     <li class="pull-right">
             <ul class="top-menu">
                 <li>
-                    <a href=""><i class="tm-icon zmdi zmdi-account-o"></i></a>
+                    <a data-ng-click="accessCtrl.login()"><i class="tm-icon zmdi zmdi-account-o"></i></a>
                 </li>
             </ul>
     </li>
