--- a/ui/views/__signup.html
+++ b/ui/views/__signup.html
@@ -1,3 +1,4 @@
+
 <header id="header" data-current-skin={{mactrl.currentSkin}} data-ng-include src="'template/header_trimmed.html'"></header>
 
 <section id="main">
@@ -18,14 +19,14 @@
           </div>
 
           <div class="card-body card-padding">
-              <div class="form-group">
-                  <label class="col-sm-2 control-label">Address</label>
-                  <div class="col-sm-10">
-                    <div class="fg-line">
-                      <input type="text" disabled="true" class="form-control input-sm" placeholder="coinbase">
-                    </div>
-                  </div>
+            <div class="form-group">
+              <label class="col-sm-2 control-label">Address</label>
+              <div class="col-sm-10">
+                <div class="fg-line">
+                  <input type="text" disabled="true" data-ng-model="accessCtrl.coinbase" class="form-control input-sm" placeholder="coinbase">
                 </div>
+              </div>
+            </div>
             <div class="form-group">
               <label class="col-sm-2 control-label">Name</label>
               <div class="col-sm-10">
@@ -43,13 +44,13 @@
                 </div>
               </div>
             </div>
-            
+
             <div class="form-group">
               <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-primary btn-m">Sign in</button>
+                <button type="submit" class="btn btn-primary btn-m" data-ng-click="accessCtrl.test()">Signup</button>
               </div>
             </div>
-          
+
           </div>
         </form>
       </div>
