--- a/ui/views/__signup.html
+++ b/ui/views/__signup.html
@@ -1,5 +1,5 @@
-
-<header id="header" data-current-skin={{mactrl.currentSkin}} data-ng-include src="'template/header_trimmed.html'"></header>
+<header id="header" data-current-skin={{mactrl.currentSkin}} data-ng-include src="'template/header_trimmed.html'">
+</header>
 
 <section id="main">
   <section id="content" class="page-view">
@@ -13,25 +13,20 @@
           <div class="card-header">
             <h2>Signup
               <small>
-                To use Proof-O-Existence first signup.
+                To use Proof-O-Existence first signup. Create an IPFS profile, then click signup!
               </small>
             </h2>
           </div>
 
           <div class="card-body card-padding">
+
+
+
             <div class="form-group">
               <label class="col-sm-2 control-label">Address</label>
               <div class="col-sm-10">
                 <div class="fg-line">
                   <input type="text" disabled="true" data-ng-model="accessCtrl.coinbase" class="form-control input-sm" placeholder="coinbase">
-                </div>
-              </div>
-            </div>
-            <div class="form-group">
-              <label class="col-sm-2 control-label">Name</label>
-              <div class="col-sm-10">
-                <div class="fg-line">
-                  <input type="text" class="form-control input-sm" placeholder="Name">
                 </div>
               </div>
             </div>
@@ -44,10 +39,49 @@
                 </div>
               </div>
             </div>
+            <div class="form-group">
+              <label class="col-sm-2 control-label">Name</label>
+              <div class="col-sm-10">
+                <div class="fg-line">
+                  <input type="text" class="form-control input-sm" placeholder="Name">
+                </div>
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-sm-2 control-label">Twitter Handle</label>
+              <div class="col-sm-10">
+                <div class="fg-line">
+                  <input type="text" class="form-control input-sm" placeholder="@me">
+                </div>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <label class="col-sm-2 control-label">Mastodon Handle</label>
+              <div class="col-sm-10">
+                <div class="fg-line">
+                  <input type="text" class="form-control input-sm" placeholder="@me">
+                </div>
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-sm-2 control-label">Profile Pic</label>
+              <div class="col-sm-10 fileinput fileinput-new" data-provides="fileinput">
+                <div class="fileinput-preview thumbnail" data-trigger="fileinput"></div>
+                <div>
+                  <span class="btn btn-info btn-file">
+                    <span class="fileinput-new">Select image</span>
+                    <span class="fileinput-exists">Change</span>
+                    <input type="file" name="...">
+                  </span>
+                  <a href="#" class="btn btn-danger fileinput-exists" data-dismiss="fileinput">Remove</a>
+                </div>
+              </div>
+            </div>
 
             <div class="form-group">
               <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-primary btn-m" data-ng-click="accessCtrl.test()">Signup</button>
+                <button type="submit" ng-disabled="accessCtrl.ipfs" class="btn btn-primary btn-m" data-ng-click="accessCtrl.signup()">Signup</button>
               </div>
             </div>
 
