--- a/ui/views/__signup.html
+++ b/ui/views/__signup.html
@@ -13,7 +13,9 @@
           <div class="card-header">
             <h2>Signup
               <small>
-                To use Proof-O-Existence first signup. Create an IPFS profile, then click signup!
+                To use Proof-O-Existence first signup. Create an IPFS profile, then click signup! <br>
+                <strong>ipfs profile:</strong> https://ipfs.infura.io/ipfs/{{accessCtrl.ipfs}} <br>
+                <strong>transaction hash:</strong> https://rinkeby.etherscan.io/{{accessCtrl.hash}}
               </small>
             </h2>
           </div>
@@ -31,19 +33,10 @@
               </div>
             </div>
             <div class="form-group">
-              <label class="col-sm-2 control-label">IPFS link</label>
-              <div class="col-sm-10">
-
-                <div class="fg-line">
-                  <input type="text" class="form-control input-sm" placeholder="0x00....">
-                </div>
-              </div>
-            </div>
-            <div class="form-group">
               <label class="col-sm-2 control-label">Name</label>
               <div class="col-sm-10">
                 <div class="fg-line">
-                  <input type="text" class="form-control input-sm" placeholder="Name">
+                  <input type="text" class="form-control input-sm" placeholder="Name" data-ng-model="accessCtrl.name">
                 </div>
               </div>
             </div>
@@ -51,7 +44,7 @@
               <label class="col-sm-2 control-label">Twitter Handle</label>
               <div class="col-sm-10">
                 <div class="fg-line">
-                  <input type="text" class="form-control input-sm" placeholder="@me">
+                  <input type="text" class="form-control input-sm" placeholder="@me"  data-ng-model="accessCtrl.twitter">
                 </div>
               </div>
             </div>
@@ -60,7 +53,7 @@
               <label class="col-sm-2 control-label">Mastodon Handle</label>
               <div class="col-sm-10">
                 <div class="fg-line">
-                  <input type="text" class="form-control input-sm" placeholder="@me">
+                  <input type="text" class="form-control input-sm" placeholder="@me"  data-ng-model="accessCtrl.mastodon">
                 </div>
               </div>
             </div>
@@ -72,7 +65,7 @@
                   <span class="btn btn-info btn-file">
                     <span class="fileinput-new">Select image</span>
                     <span class="fileinput-exists">Change</span>
-                    <input type="file" name="...">
+                    <input type="file" name="..." select-ng-files ng-model="accessCtrl.image" accept="image/*">
                   </span>
                   <a href="#" class="btn btn-danger fileinput-exists" data-dismiss="fileinput">Remove</a>
                 </div>
@@ -81,7 +74,8 @@
 
             <div class="form-group">
               <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" ng-disabled="accessCtrl.ipfs" class="btn btn-primary btn-m" data-ng-click="accessCtrl.signup()">Signup</button>
+                <button type="submit" ng-hide="accessCtrl.busy" class="btn btn-primary btn-m" data-ng-click="accessCtrl.signup()">Signup</button>
+                <button type="submit" ng-show="accessCtrl.busy" class="btn btn-primary btn-m">Busy</button>
               </div>
             </div>
 
