--- a/ui/template/header.html
+++ b/ui/template/header.html
@@ -1,6 +1,6 @@
 <ul class="header-inner clearfix">
-    <li class="logo hidden-xs">
-        <a data-ui-sref="profile.profile-about">Proof-O-Existence</a>
+    <li class="logo">
+        <a>PoE</a>
     </li>
 
     <li class="pull-right">
@@ -44,8 +44,6 @@
                         </div>
 
                         <div class="clearfix"></div>
-
-                        <a class="lv-footer" href="">View Previous</a>
                     </div>
 
                 </div>
