--- a/ui/template/header_trimmed.html
+++ b/ui/template/header_trimmed.html
@@ -1,6 +1,6 @@
 <ul class="header-inner clearfix">
-    <li class="logo hidden-xs">
-        <a>Proof-O-Existence</a>
+    <li class="logo">
+        <a>PoE</a>
     </li>
     <li class="pull-right">
             <ul class="top-menu">
