--- a/ui/views/__profile-connections.html
+++ b/ui/views/__profile-connections.html
@@ -1,34 +1,4 @@
 <div class="pmb-block">
-    <div class="p-header">
-        <ul class="p-menu">
-            <li class="active"><a href=""><i class="zmdi zmdi-accounts-add hidden-xs"></i> Recommanded</a></li>
-            <li><a href=""><i class="zmdi zmdi-accounts hidden-xs"></i> Connected</a></li>
-            <li class="pm-search">
-                <div class="pms-inner">
-                    <i class="zmdi zmdi-search"></i>
-                    <input type="text" placeholder="Search...">
-                </div>
-            </li>
-        </ul>
-
-        <ul class="actions m-t-20 hidden-xs">
-            <li class="dropdown" uib-dropdown>
-                <a href="" uib-dropdown-toggle>
-                    <i class="zmdi zmdi-more-vert"></i>
-                </a>
-
-                <ul class="dropdown-menu dropdown-menu-right">
-                    <li>
-                        <a href="">Refresh</a>
-                    </li>
-                    <li>
-                        <a href="">Settings</a>
-                    </li>
-                </ul>
-            </li>
-        </ul>
-    </div>
-
     <div class="contacts c-profile clearfix row">
         <div class="col-md-3 col-sm-6 col-xs-6">
             <div class="c-item">
@@ -42,7 +12,8 @@
                 </div>
 
                 <div class="c-footer">
-                    <button class="waves-effect"><i class="zmdi zmdi-person-add"></i> Add</button>
+                    <button class="waves-effect">
+                        <i class="zmdi zmdi-person-add"></i> Add</button>
                 </div>
             </div>
         </div>
@@ -59,7 +30,8 @@
                 </div>
 
                 <div class="c-footer">
-                    <button class="waves-effect"><i class="zmdi zmdi-person-add"></i> Add</button>
+                    <button class="waves-effect">
+                        <i class="zmdi zmdi-person-add"></i> Add</button>
                 </div>
             </div>
         </div>
@@ -76,7 +48,8 @@
                 </div>
 
                 <div class="c-footer">
-                    <button class="waves-effect"><i class="zmdi zmdi-person-add"></i> Add</button>
+                    <button class="waves-effect">
+                        <i class="zmdi zmdi-person-add"></i> Add</button>
                 </div>
             </div>
         </div>
@@ -93,7 +66,8 @@
                 </div>
 
                 <div class="c-footer">
-                    <button class="waves-effect"><i class="zmdi zmdi-person-add"></i> Add</button>
+                    <button class="waves-effect">
+                        <i class="zmdi zmdi-person-add"></i> Add</button>
                 </div>
             </div>
         </div>
@@ -110,7 +84,8 @@
                 </div>
 
                 <div class="c-footer">
-                    <button class="waves-effect"><i class="zmdi zmdi-person-add"></i> Add</button>
+                    <button class="waves-effect">
+                        <i class="zmdi zmdi-person-add"></i> Add</button>
                 </div>
             </div>
         </div>
@@ -127,7 +102,8 @@
                 </div>
 
                 <div class="c-footer">
-                    <button class="waves-effect"><i class="zmdi zmdi-person-add"></i> Add</button>
+                    <button class="waves-effect">
+                        <i class="zmdi zmdi-person-add"></i> Add</button>
                 </div>
             </div>
         </div>
@@ -144,7 +120,8 @@
                 </div>
 
                 <div class="c-footer">
-                    <button class="waves-effect"><i class="zmdi zmdi-person-add"></i> Add</button>
+                    <button class="waves-effect">
+                        <i class="zmdi zmdi-person-add"></i> Add</button>
                 </div>
             </div>
         </div>
@@ -161,7 +138,8 @@
                 </div>
 
                 <div class="c-footer">
-                    <button class="waves-effect"><i class="zmdi zmdi-person-add"></i> Add</button>
+                    <button class="waves-effect">
+                        <i class="zmdi zmdi-person-add"></i> Add</button>
                 </div>
             </div>
         </div>
@@ -178,7 +156,8 @@
                 </div>
 
                 <div class="c-footer">
-                    <button class="waves-effect"><i class="zmdi zmdi-person-add"></i> Add</button>
+                    <button class="waves-effect">
+                        <i class="zmdi zmdi-person-add"></i> Add</button>
                 </div>
             </div>
         </div>
@@ -195,7 +174,8 @@
                 </div>
 
                 <div class="c-footer">
-                    <button class="waves-effect"><i class="zmdi zmdi-person-add"></i> Add</button>
+                    <button class="waves-effect">
+                        <i class="zmdi zmdi-person-add"></i> Add</button>
                 </div>
             </div>
         </div>
@@ -212,7 +192,8 @@
                 </div>
 
                 <div class="c-footer">
-                    <button class="waves-effect"><i class="zmdi zmdi-person-add"></i> Add</button>
+                    <button class="waves-effect">
+                        <i class="zmdi zmdi-person-add"></i> Add</button>
                 </div>
             </div>
         </div>
@@ -229,7 +210,8 @@
                 </div>
 
                 <div class="c-footer">
-                    <button class="waves-effect"><i class="zmdi zmdi-person-add"></i> Add</button>
+                    <button class="waves-effect">
+                        <i class="zmdi zmdi-person-add"></i> Add</button>
                 </div>
             </div>
         </div>
@@ -246,7 +228,8 @@
                 </div>
 
                 <div class="c-footer">
-                    <button class="waves-effect"><i class="zmdi zmdi-person-add"></i> Add</button>
+                    <button class="waves-effect">
+                        <i class="zmdi zmdi-person-add"></i> Add</button>
                 </div>
             </div>
         </div>
@@ -263,7 +246,8 @@
                 </div>
 
                 <div class="c-footer">
-                    <button class="waves-effect"><i class="zmdi zmdi-person-add"></i> Add</button>
+                    <button class="waves-effect">
+                        <i class="zmdi zmdi-person-add"></i> Add</button>
                 </div>
             </div>
         </div>
@@ -280,7 +264,8 @@
                 </div>
 
                 <div class="c-footer">
-                    <button class="waves-effect"><i class="zmdi zmdi-person-add"></i> Add</button>
+                    <button class="waves-effect">
+                        <i class="zmdi zmdi-person-add"></i> Add</button>
                 </div>
             </div>
         </div>
@@ -297,13 +282,15 @@
                 </div>
 
                 <div class="c-footer">
-                    <button class="waves-effect"><i class="zmdi zmdi-person-add"></i> Add</button>
+                    <button class="waves-effect">
+                        <i class="zmdi zmdi-person-add"></i> Add</button>
                 </div>
             </div>
         </div>
     </div>
 
     <div class="load-more">
-        <a href=""><i class="zmdi zmdi-refresh-alt"></i> Load More...</a>
+        <a href="">
+            <i class="zmdi zmdi-refresh-alt"></i> Load More...</a>
     </div>
 </div>
