--- a/ui/css/app.min.1.css
+++ b/ui/css/app.min.1.css
@@ -9953,11 +9953,11 @@ a.waves-effect .waves-ripple {
 }
 
 .bgm-bluegray {
-  background-color: #607D8B !important;
+  background-color: #2d2e30 !important;
 }
 
 .c-bluegray {
-  color: #607D8B !important;
+  color: #2d2e30 !important;
 }
 
 .bgm-indigo {
@@ -14777,7 +14777,7 @@ a.thumbnail.active {
 }
 
 .modal[data-modal-color="bluegray"] .modal-content {
-  background: #607D8B;
+  background: #2d2e30;
 }
 
 .modal[data-modal-color="red"] .modal-content {
@@ -15225,39 +15225,39 @@ a.thumbnail.active {
 }
 
 .tooltip-bluegray .tooltip-inner {
-  background-color: #607D8B;
+  background-color: #2d2e30;
 }
 
 .tooltip-bluegray.top .tooltip-arrow {
-  border-top-color: #607D8B;
+  border-top-color: #2d2e30;
 }
 
 .tooltip-bluegray.top-left .tooltip-arrow {
-  border-top-color: #607D8B;
+  border-top-color: #2d2e30;
 }
 
 .tooltip-bluegray.top-right .tooltip-arrow {
-  border-top-color: #607D8B;
+  border-top-color: #2d2e30;
 }
 
 .tooltip-bluegray.right .tooltip-arrow {
-  border-right-color: #607D8B;
+  border-right-color: #2d2e30;
 }
 
 .tooltip-bluegray.left .tooltip-arrow {
-  border-left-color: #607D8B;
+  border-left-color: #2d2e30;
 }
 
 .tooltip-bluegray.bottom .tooltip-arrow {
-  border-bottom-color: #607D8B;
+  border-bottom-color: #2d2e30;
 }
 
 .tooltip-bluegray.bottom-left .tooltip-arrow {
-  border-bottom-color: #607D8B;
+  border-bottom-color: #2d2e30;
 }
 
 .tooltip-bluegray.bottom-right .tooltip-arrow {
-  border-bottom-color: #607D8B;
+  border-bottom-color: #2d2e30;
 }
 
 .tooltip-black .tooltip-inner {
