--- a/ui/less/inc/profile.less
+++ b/ui/less/inc/profile.less
@@ -73,7 +73,7 @@
             padding: 30px 5px 0;
 
             @media(min-width: @screen-sm-min) {
-                 background: @m-amber;
+                 background: @m-green;
                  padding-bottom: 15px;
             }
         }
