--- a/ui/less/inc/variables.less
+++ b/ui/less/inc/variables.less
@@ -225,7 +225,7 @@
 @m-orange:                 #FF9800;
 @m-deeporange:             #FF5722;
 @m-gray:                   #9E9E9E;
-@m-bluegray:               #607D8B;
+@m-bluegray:               #2d2e30;
 @m-indigo:                 #3F51B5;
 @m-pink:                   #E91E63;
 @m-brown:                  #795548;
