--- a/ui/template/footer.html
+++ b/ui/template/footer.html
@@ -1,4 +1,4 @@
-Rinkeby Contract: 0x45389345633313134646
+Rinkeby Contract: {{profileCtrl.contractAddress}}
 
 <ul class="f-menu">
     <li><a href="">Rinkeby</a></li>
