--- a/ui/views/__profile.html
+++ b/ui/views/__profile.html
@@ -7,22 +7,22 @@
    <section id="content" class="page-view">
     <div class="container">
 
-      <div class="card" id="profile-main" data-ng-controller="profileCtrl as pctrl">
+      <div class="card" id="profile-main">
           <div class="pm-overview c-overflow">
               <div class="pmo-pic">
                   <div class="p-relative">
                       <a href="">
-                          <img class="img-responsive" src="img/profile-pics/paul.jpg" alt="">
+                          <img class="img-responsive" data-ng-src="{{profileCtrl.me.pic}}" alt="">
                       </a>
                   </div>
    
                   <div class="pmo-stat">
-                      <h2 class="m-0 c-white">1</h2>
+                      <h2 class="m-0 c-white">{{profileCtrl.myClaims.length}}</h2>
                       Total Claims
                   </div>
               </div>
-              <!-- <div class="pmo-block pmo-contact hidden-xs">
-                <h2>Network</h2>
+              <div class="pmo-block pmo-contact hidden-xs">
+                <!-- <h2>Network</h2>
 
                 <ul>
                     <li><i class="zmdi zmdi-account"></i> Paul </li>
@@ -31,8 +31,8 @@
                     <li><i class="zmdi zmdi-evernote"></i> @phzietsman@mastodon.social </li>
                     
                     <li><i class="zmdi zmdi-codepen"></i> https://ipfs.infura.io/ipfs/{{ipfs_bio}}</li>
-                </ul>
-            </div> -->
+                </ul> -->
+            </div>
           </div>
   
           <div class="pm-body clearfix">
