--- a/ui/template/claimModal.html
+++ b/ui/template/claimModal.html
@@ -13,7 +13,7 @@
                 <span class="btn btn-info btn-file">
                   <span class="fileinput-new">Select image</span>
                   <span class="fileinput-exists">Change</span>
-                  <input type="file" name="..." select-ng-files ng-model="accessCtrl.image" accept="image/*">
+                  <input type="file" name="..." select-ng-files ng-model="modalInstanceCtrl.image" accept="image/*">
                 </span>
                 <a href="#" class="btn btn-danger fileinput-exists" data-dismiss="fileinput">Remove</a>
               </div>
@@ -23,7 +23,7 @@
               <label class="col-sm-2 control-label">Name</label>
               <div class="col-sm-10">
                 <div class="fg-line">
-                  <input type="text" class="form-control input-sm" placeholder="Name" data-ng-model="accessCtrl.name">
+                  <input type="text" class="form-control input-sm" placeholder="Name" data-ng-model="modalInstanceCtrl.name">
                 </div>
               </div>
               <br>
@@ -32,7 +32,7 @@
             <label class="col-sm-2 control-label">Description</label>
             <div class="col-sm-10">
                 <div class="fg-line">
-                    <textarea data-ng-model="pctrl.profileSummary" class="form-control" rows="5" placeholder="Summary..."></textarea>
+                    <textarea data-ng-model="modalInstanceCtrl.description" class="form-control" rows="5" placeholder="Summary..."></textarea>
                 </div>
             </div>
             <br>
