--- a/ui/views/__profile-about.html
+++ b/ui/views/__profile-about.html
@@ -36,8 +36,8 @@
             </dl>
 
             <dl class="dl-horizontal">
-                    <dt>IPFS Link</dt>
-                    <dd><a href="https://ipfs.infura.io/ipfs/{{profileCtrl.me.bioIpfs}}">{{profileCtrl.me.bioIpfs}}</a></dd>
+                    <dt>Ipfs Link</dt>
+                    <dd><a href="https://ipfs.infura.io/ipfs/{{profileCtrl.me.bioIpfs}}">{{mactrl.shortenIpfs(profileCtrl.me.bioIpfs)}}</a></dd>
                 </dl>
 
             <div class="dl-horizontal">
