--- a/ui/views/__profile.html
+++ b/ui/views/__profile.html
@@ -1,4 +1,4 @@
-<header id="header" data-current-skin={{mactrl.currentSkin}} data-ng-include src="'template/header.html'" data-ng-controller="headerCtrl as hctrl"></header>
+<header id="header" data-current-skin={{mactrl.currentSkin}} data-ng-include src="'template/header.html'"></header>
 
 <section id="main">
 
@@ -21,18 +21,6 @@
                       Total Claims
                   </div>
               </div>
-              <div class="pmo-block pmo-contact hidden-xs">
-                <!-- <h2>Network</h2>
-
-                <ul>
-                    <li><i class="zmdi zmdi-account"></i> Paul </li>
-                    <li><i class="zmdi zmdi-link"></i> 0x627306090abab3a6e1400e9345bc60c78a8bef57 </li>
-                    <li><i class="zmdi zmdi-twitter"></i> @phzietsman </li>
-                    <li><i class="zmdi zmdi-evernote"></i> @phzietsman@mastodon.social </li>
-                    
-                    <li><i class="zmdi zmdi-codepen"></i> https://ipfs.infura.io/ipfs/{{ipfs_bio}}</li>
-                </ul> -->
-            </div>
           </div>
   
           <div class="pm-body clearfix">
