Search and refresh

--- a/ui/template/header.html
+++ b/ui/template/header.html
@@ -16,7 +16,7 @@
                 <a href="" data-ng-click="profileCtrl.openSearch()"><i class="tm-icon zmdi zmdi-search"></i></a>
             </li>
             <li>
-                <a href=""><i class="tm-icon zmdi zmdi-refresh-sync"></i></a>
+                <a href=""><i class="tm-icon zmdi zmdi-refresh-sync" data-ng-click="profileCtrl.refresh()"></i></a>
             </li>
         </ul>
     </li>
