--- a/ui/views/__profile.html
+++ b/ui/views/__profile.html
@@ -8,7 +8,7 @@
     <div class="container">
 
       <div class="card" id="profile-main">
-          <div class="pm-overview c-overflow">
+          <div class="pm-overview">
               <div class="pmo-pic">
                   <div class="p-relative">
                       <a href="">
