--- a/ui/views/__profile-all-claims.html
+++ b/ui/views/__profile-all-claims.html
@@ -54,11 +54,18 @@
             <div class="clearfix"></div>
 
             <ul class="tvb-stats">
-                <li class="tvbs-likes">
-                    <i class="zmdi zmdi-thumb-up"></i> 0
-                    <span class="hidden-xs">Endorsed</span>
-                </li>
-            </ul>
+                    <li class="tvbs-likes">
+                        <i class="zmdi zmdi-thumb-up"></i> {{claim.up}}
+                        <span class="hidden-xs">Endorsed</span>
+                    </li>
+                </ul>
+    
+                <ul class="tvb-stats">
+                        <li class="tvbs-views">
+                            <i class="zmdi zmdi-thumb-down"></i> {{claim.down}}
+                            <span class="hidden-xs">Endorsed</span>
+                        </li>
+                    </ul>
 
         </div>
     </div>
