--- a/ui/views/__profile-claims.html
+++ b/ui/views/__profile-claims.html
@@ -44,10 +44,17 @@
 
             <ul class="tvb-stats">
                 <li class="tvbs-likes">
-                    <i class="zmdi zmdi-thumb-up"></i> 0
+                    <i class="zmdi zmdi-thumb-up"></i> {{claim.up}}
                     <span class="hidden-xs">Endorsed</span>
                 </li>
             </ul>
+
+            <ul class="tvb-stats">
+                    <li class="tvbs-views">
+                        <i class="zmdi zmdi-thumb-down"></i> {{claim.down}}
+                        <span class="hidden-xs">Endorsed</span>
+                    </li>
+                </ul>
 
         </div>
     </div>
