project layout more friendy

--- a/ui/template/footer.html
+++ b/ui/template/footer.html
@@ -1,4 +1,4 @@
-Rinkeby Contract: {{profileCtrl.contractAddress}}
+Rinkeby Contract: {{mactrl.contractAddress}}
 
 <ul class="f-menu">
     <li><a href="">Rinkeby</a></li>
