--- a/ui/views/__profile-about.html
+++ b/ui/views/__profile-about.html
@@ -11,7 +11,7 @@
 
                 <ul class="dropdown-menu dropdown-menu-right">
                     <li>
-                        <a data-ng-click="profileCtrl.editInfo = 1" href="">Edit</a>
+                        <!-- <a data-ng-click="profileCtrl.editInfo = 1" href="">Edit</a> -->
                     </li>
                 </ul>
             </li>
