--- a/ui/views/__web3js.html
+++ b/ui/views/__web3js.html
@@ -1,1 +1,34 @@
-missing
+<section id="main">
+  <section id="content" class="page-view">
+
+
+
+    <div class="container">
+      <div class="card">
+
+        <form class="form-horizontal" role="form">
+          <div class="card-header">
+            <h2>Web3 Missing
+              <small>
+                Seems you don't have Web3 available on your browser! Either use the coinbase mobile wallet and DApp browser or install Metamask
+                on your browser.
+              </small>
+            </h2>
+          </div>
+
+          <div class="card-body card-padding">
+            <p>
+              Seems you don't have Web3 available on your browser! Either use the coinbase mobile wallet and DApp browser or install Metamask
+              on your browser.
+            </p>
+
+            <img src="img/metamask-logo.png">
+
+          </div>
+        </form>
+      </div>
+
+    </div>
+
+  </section>
+</section>
