--- a/ui/less/inc/profile.less
+++ b/ui/less/inc/profile.less
@@ -383,6 +383,7 @@
             padding: 5px 10px 6px;
             border: 1px solid #ccc;
             margin-right: 2px;
+            cursor: pointer;
 
             i {
                 font-size: 15px;
